@@ -9,6 +9,7 @@ import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollec
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.typedefs.TypeDefCategory;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.repositoryconnector.OMRSRepositoryHelper;
 
+import java.lang.reflect.InvocationTargetException;
 
 
 /**
@@ -43,6 +44,7 @@ public class AssetConverter<B> extends AssetOwnerOMASConverter<B>
      * @throws PropertyServerException there is a problem instantiating the bean
      */
     @Override
+    @SuppressWarnings(value = "deprecation")
     public B getNewBean(Class<B>     beanClass,
                         EntityDetail entity,
                         String       methodName) throws PropertyServerException
@@ -52,7 +54,7 @@ public class AssetConverter<B> extends AssetOwnerOMASConverter<B>
             /*
              * This is initial confirmation that the generic converter has been initialized with an appropriate bean class.
              */
-            B returnBean = beanClass.newInstance();
+            B returnBean = beanClass.getDeclaredConstructor().newInstance();
 
             if (returnBean instanceof AssetElement)
             {
@@ -100,6 +102,12 @@ public class AssetConverter<B> extends AssetOwnerOMASConverter<B>
                     assetProperties.setOwner(this.getOwner(instanceProperties));
                     assetProperties.setOwnerType(this.getOwnerTypeFromProperties(instanceProperties));
 
+                    instanceProperties = super.getClassificationProperties(OpenMetadataAPIMapper.OWNERSHIP_CLASSIFICATION_TYPE_NAME, entity);
+
+                    assetProperties.setOwner(this.getOwner(instanceProperties));
+                    assetProperties.setOwnerTypeName(this.getOwnerTypeName(instanceProperties));
+                    assetProperties.setOwnerPropertyName(this.getOwnerPropertyName(instanceProperties));
+
                     instanceProperties = super.getClassificationProperties(OpenMetadataAPIMapper.ASSET_ORIGIN_CLASSIFICATION_NAME, entity);
 
                     assetProperties.setOriginOrganizationGUID(this.getOriginOrganizationGUID(instanceProperties));
@@ -116,7 +124,7 @@ public class AssetConverter<B> extends AssetOwnerOMASConverter<B>
 
             return returnBean;
         }
-        catch (IllegalAccessException | InstantiationException | ClassCastException error)
+        catch (IllegalAccessException | InstantiationException | ClassCastException | NoSuchMethodException | InvocationTargetException error)
         {
             super.handleInvalidBeanClass(beanClass.getName(), error, methodName);
         }
