@@ -4,14 +4,13 @@ package org.odpi.openmetadata.accessservices.datamanager.converters;
 
 import org.odpi.openmetadata.accessservices.datamanager.metadataelements.DatabaseTableElement;
 import org.odpi.openmetadata.accessservices.datamanager.metadataelements.SchemaTypeElement;
-import org.odpi.openmetadata.accessservices.datamanager.properties.ComplexSchemaTypeProperties;
 import org.odpi.openmetadata.accessservices.datamanager.properties.DatabaseTableProperties;
-import org.odpi.openmetadata.accessservices.datamanager.properties.SchemaTypeProperties;
 import org.odpi.openmetadata.frameworks.connectors.ffdc.PropertyServerException;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.instances.*;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.typedefs.TypeDefCategory;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.repositoryconnector.OMRSRepositoryHelper;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 
 
@@ -62,7 +61,7 @@ public class DatabaseTableConverter<B> extends DataManagerOMASConverter<B>
             /*
              * This is initial confirmation that the generic converter has been initialized with an appropriate bean class.
              */
-            B returnBean = beanClass.newInstance();
+            B returnBean = beanClass.getDeclaredConstructor().newInstance();
 
             if (returnBean instanceof DatabaseTableElement)
             {
@@ -99,12 +98,9 @@ public class DatabaseTableConverter<B> extends DataManagerOMASConverter<B>
 
                     if (schemaType instanceof SchemaTypeElement)
                     {
-                        SchemaTypeProperties schemaTypeProperties = ((SchemaTypeElement) schemaType).getSchemaTypeProperties();
+                        SchemaTypeElement schemaTypeElement = (SchemaTypeElement)schemaType;
 
-                        if (schemaTypeProperties instanceof ComplexSchemaTypeProperties)
-                        {
-                            bean.setDatabaseColumnCount(((ComplexSchemaTypeProperties) schemaTypeProperties).getAttributeCount());
-                        }
+                        bean.setDatabaseColumnCount(schemaTypeElement.getAttributeCount());
                     }
                 }
                 else
@@ -115,7 +111,7 @@ public class DatabaseTableConverter<B> extends DataManagerOMASConverter<B>
 
             return returnBean;
         }
-        catch (IllegalAccessException | InstantiationException | ClassCastException error)
+        catch (IllegalAccessException | InstantiationException | ClassCastException | NoSuchMethodException | InvocationTargetException error)
         {
             super.handleInvalidBeanClass(beanClass.getName(), error, methodName);
         }
