@@ -12,6 +12,8 @@ import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollec
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.typedefs.TypeDefCategory;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.repositoryconnector.OMRSRepositoryHelper;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * FileFolderConverter transfers the relevant properties from an Open Metadata Repository Services (OMRS)
  * EntityDetail object into a FileFolderElement bean.
@@ -53,7 +55,7 @@ public class FileFolderConverter<B> extends SecurityManagerOMASConverter<B>
             /*
              * This is initial confirmation that the generic converter has been initialized with an appropriate bean class.
              */
-            B returnBean = beanClass.newInstance();
+            B returnBean = beanClass.getDeclaredConstructor().newInstance();
 
             if (returnBean instanceof FileFolderElement)
             {
@@ -77,12 +79,6 @@ public class FileFolderConverter<B> extends SecurityManagerOMASConverter<B>
                     fileFolderProperties.setCreateTime(this.removeStoreCreateTime(instanceProperties));
                     fileFolderProperties.setModifiedTime(this.removeStoreUpdateTime(instanceProperties));
 
-                    /* Note this value should be in the classification */
-                    fileFolderProperties.setOwner(this.removeOwner(instanceProperties));
-                    /* Note this value should be in the classification */
-                    fileFolderProperties.setOwnerCategory(this.removeOwnerCategoryFromProperties(instanceProperties));
-                    /* Note this value should be in the classification */
-                    fileFolderProperties.setZoneMembership(this.removeZoneMembership(instanceProperties));
 
                     /*
                      * Any remaining properties are returned in the extended properties.  They are
@@ -90,25 +86,6 @@ public class FileFolderConverter<B> extends SecurityManagerOMASConverter<B>
                      */
                     fileFolderProperties.setTypeName(bean.getElementHeader().getType().getTypeName());
                     fileFolderProperties.setExtendedProperties(this.getRemainingExtendedProperties(instanceProperties));
-
-                    /*
-                     * The values in the classifications override the values in the main properties of the Asset's entity.
-                     * Having these properties in the main entity is deprecated.
-                     */
-                    instanceProperties = super.getClassificationProperties(OpenMetadataAPIMapper.ASSET_ZONES_CLASSIFICATION_NAME, entity);
-
-                    fileFolderProperties.setZoneMembership(this.getZoneMembership(instanceProperties));
-
-                    instanceProperties = super.getClassificationProperties(OpenMetadataAPIMapper.ASSET_OWNERSHIP_CLASSIFICATION_NAME, entity);
-
-                    fileFolderProperties.setOwner(this.getOwner(instanceProperties));
-                    fileFolderProperties.setOwnerCategory(this.getOwnerCategoryFromProperties(instanceProperties));
-
-                    instanceProperties = super.getClassificationProperties(OpenMetadataAPIMapper.ASSET_ORIGIN_CLASSIFICATION_NAME, entity);
-
-                    fileFolderProperties.setOriginOrganizationGUID(this.getOriginOrganizationGUID(instanceProperties));
-                    fileFolderProperties.setOriginBusinessCapabilityGUID(this.getOriginBusinessCapabilityGUID(instanceProperties));
-                    fileFolderProperties.setOtherOriginValues(this.getOtherOriginValues(instanceProperties));
 
                     instanceProperties = super.getClassificationProperties(OpenMetadataAPIMapper.DATA_STORE_ENCODING_CLASSIFICATION_NAME, entity);
 
@@ -127,7 +104,7 @@ public class FileFolderConverter<B> extends SecurityManagerOMASConverter<B>
 
             return returnBean;
         }
-        catch (IllegalAccessException | InstantiationException | ClassCastException error)
+        catch (IllegalAccessException | InstantiationException | ClassCastException | NoSuchMethodException | InvocationTargetException error)
         {
             super.handleInvalidBeanClass(beanClass.getName(), error, methodName);
         }
