@@ -112,8 +112,8 @@ public class RESTClientFactory
         {
             try
             {
-                Class<?>      connectorProviderClass = Class.forName(connectorProviderClassName);
-                Object     potentialConnectorProvider = connectorProviderClass.newInstance();
+                Class<?>   connectorProviderClass = Class.forName(connectorProviderClassName);
+                Object     potentialConnectorProvider = connectorProviderClass.getDeclaredConstructor().newInstance();
 
                 ConnectorProvider connectorProvider = (ConnectorProvider)potentialConnectorProvider;
 
