@@ -23,6 +23,7 @@ import org.odpi.openmetadata.governanceservers.enginehostservices.ffdc.EngineHos
 import org.odpi.openmetadata.governanceservers.enginehostservices.threads.EngineConfigurationRefreshThread;
 
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -180,7 +181,6 @@ public class EngineHostOperationalServices
              * for the governance engines.
              */
             EngineConfigurationRefreshThread configurationRefreshThread = new EngineConfigurationRefreshThread(governanceEngineHandlers,
-                                                                                                               configurationClient,
                                                                                                                eventClient,
                                                                                                                auditLog,
                                                                                                                localServerUserId,
@@ -416,9 +416,9 @@ public class EngineHostOperationalServices
         {
             try
             {
-                return (EngineServiceAdmin) Class.forName(engineServiceAdminClassName).newInstance();
+                return (EngineServiceAdmin) Class.forName(engineServiceAdminClassName).getDeclaredConstructor().newInstance();
             }
-            catch (ClassNotFoundException | InstantiationException | IllegalAccessException error)
+            catch (ClassNotFoundException | InstantiationException | IllegalAccessException| NoSuchMethodException | InvocationTargetException error)
             {
                 auditLog.logException(methodName,
                                       EngineHostServicesAuditCode.BAD_ENGINE_SERVICE_ADMIN_CLASS.getMessageDefinition(engineServiceConfig.getEngineServiceName(),
